install/gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.gateway.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.gateway.com"
    tls:
      mode: SIMPLE #enables HTTPS on this port
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-egressgateway
  namespace: istio-system
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.gateway.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.gateway.com"
    tls:
      mode: SIMPLE #enables HTTPS on this port
      serverCertificate: /etc/istio/egressgateway-certs/tls.crt
      privateKey: /etc/istio/egressgateway-certs/tls.key
